Add body parameter to PUT endpoint in Swagger
